--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -115,17 +115,27 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="buildParticleSystem">
+   <widget class="QPushButton" name="browsepath">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>100</y>
+      <x>670</x>
+      <y>470</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>Build</string>
+     <string>Browse</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="lifetime">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>100</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
