--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -290,6 +290,7 @@
     <slot>setVelocityX()</slot>
     <slot>setVelocityY()</slot>
     <slot>setVelocityZ()</slot>
+    <slot>setMaxParticles()</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -370,6 +371,22 @@
     <hint type="sourcelabel">
      <x>860</x>
      <y>188</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>maxParticles</sender>
+   <signal>textChanged()</signal>
+   <receiver>maincontainer</receiver>
+   <slot>setMaxParticles()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>700</x>
+     <y>368</y>
     </hint>
     <hint type="destinationlabel">
      <x>474</x>
