--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -24,29 +24,11 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="label_ParticleID">
-    <property name="geometry">
-     <rect>
-      <x>660</x>
-      <y>10</y>
-      <width>200</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>No particle selected</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_ParticleInfo">
     <property name="geometry">
      <rect>
       <x>660</x>
-      <y>60</y>
+      <y>10</y>
       <width>200</width>
       <height>171</height>
      </rect>
@@ -133,8 +115,8 @@
      <rect>
       <x>670</x>
       <y>200</y>
-      <width>61</width>
-      <height>31</height>
+      <width>64</width>
+      <height>24</height>
      </rect>
     </property>
    </widget>
@@ -156,8 +138,8 @@
      <rect>
       <x>670</x>
       <y>260</y>
-      <width>61</width>
-      <height>31</height>
+      <width>64</width>
+      <height>24</height>
      </rect>
     </property>
    </widget>
@@ -166,8 +148,8 @@
      <rect>
       <x>670</x>
       <y>320</y>
-      <width>61</width>
-      <height>31</height>
+      <width>64</width>
+      <height>24</height>
      </rect>
     </property>
    </widget>
@@ -176,8 +158,8 @@
      <rect>
       <x>670</x>
       <y>140</y>
-      <width>61</width>
-      <height>31</height>
+      <width>64</width>
+      <height>24</height>
      </rect>
     </property>
    </widget>
@@ -186,8 +168,8 @@
      <rect>
       <x>750</x>
       <y>140</y>
-      <width>61</width>
-      <height>31</height>
+      <width>64</width>
+      <height>24</height>
      </rect>
     </property>
    </widget>
@@ -196,8 +178,8 @@
      <rect>
       <x>830</x>
       <y>140</y>
-      <width>61</width>
-      <height>31</height>
+      <width>64</width>
+      <height>24</height>
      </rect>
     </property>
    </widget>
@@ -248,6 +230,28 @@
       <width>191</width>
       <height>41</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>490</y>
+      <width>641</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+    <property name="invertedAppearance">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
