--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -146,7 +146,7 @@
      </rect>
     </property>
     <property name="placeholderText">
-     <string>0</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="maxParticles">
@@ -246,7 +246,7 @@
       <x>750</x>
       <y>470</y>
       <width>191</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
    </widget>
@@ -309,6 +309,19 @@
     </property>
     <property name="text">
      <string>Gravity</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_MaxParticles_2">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>450</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Texture</string>
     </property>
    </widget>
   </widget>
