New UI Start/End Colors, replaced POSITION with VECTOR3

--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -27,10 +27,10 @@
    <widget class="QLabel" name="label_ParticleInfo">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>10</y>
-      <width>200</width>
-      <height>171</height>
+      <x>10</x>
+      <y>500</y>
+      <width>361</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="font">
@@ -158,6 +158,9 @@
       <height>24</height>
      </rect>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
     <property name="placeholderText">
      <string/>
     </property>
@@ -254,9 +257,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>490</y>
+      <y>580</y>
       <width>641</width>
-      <height>21</height>
+      <height>10</height>
      </rect>
     </property>
     <property name="value">
@@ -275,8 +278,8 @@
    <widget class="QPushButton" name="savePS">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>540</y>
+      <x>830</x>
+      <y>550</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -324,6 +327,116 @@
      <string>Texture</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="colorInBtn">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>10</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Color Start</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="colorInDisplay">
+    <property name="geometry">
+     <rect>
+      <x>729</x>
+      <y>10</y>
+      <width>211</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <kerning>true</kerning>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>IBeamCursor</cursorShape>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::NoContextMenu</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="frame">
+     <bool>false</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
+    <property name="placeholderText">
+     <string>Color Start</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="colorOutDisplay">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>50</y>
+      <width>211</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <kerning>true</kerning>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>IBeamCursor</cursorShape>
+    </property>
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::NoContextMenu</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="frame">
+     <bool>false</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
+    <property name="placeholderText">
+     <string>Color End</string>
+    </property>
+    <property name="clearButtonEnabled">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="colorOutBtn">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>50</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Color End</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -368,6 +481,8 @@
     <slot>browse()</slot>
     <slot>save()</slot>
     <slot>setGravity()</slot>
+    <slot>colorIn()</slot>
+    <slot>colorOut()</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -512,6 +627,38 @@
     <hint type="sourcelabel">
      <x>701</x>
      <y>244</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>colorInBtn</sender>
+   <signal>clicked()</signal>
+   <receiver>maincontainer</receiver>
+   <slot>colorIn()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>734</x>
+     <y>57</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>colorOutBtn</sender>
+   <signal>clicked()</signal>
+   <receiver>maincontainer</receiver>
+   <slot>colorOut()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>694</x>
+     <y>97</y>
     </hint>
     <hint type="destinationlabel">
      <x>474</x>
