--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -101,7 +101,7 @@
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>470</y>
+      <y>460</y>
       <width>75</width>
       <height>31</height>
      </rect>
@@ -113,9 +113,9 @@
    <widget class="QPlainTextEdit" name="lifetime">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>260</y>
-      <width>64</width>
+      <x>760</x>
+      <y>160</y>
+      <width>81</width>
       <height>24</height>
      </rect>
     </property>
@@ -126,8 +126,8 @@
    <widget class="QLabel" name="label_Lifetime">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>240</y>
+      <x>770</x>
+      <y>140</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -139,9 +139,9 @@
    <widget class="QPlainTextEdit" name="emissionDelay">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>320</y>
-      <width>64</width>
+      <x>850</x>
+      <y>160</y>
+      <width>81</width>
       <height>24</height>
      </rect>
     </property>
@@ -152,14 +152,14 @@
    <widget class="QPlainTextEdit" name="maxParticles">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>380</y>
-      <width>64</width>
+      <x>760</x>
+      <y>210</y>
+      <width>81</width>
       <height>24</height>
      </rect>
     </property>
     <property name="readOnly">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="placeholderText">
      <string/>
@@ -169,8 +169,8 @@
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>140</y>
-      <width>64</width>
+      <y>110</y>
+      <width>91</width>
       <height>24</height>
      </rect>
     </property>
@@ -181,9 +181,9 @@
    <widget class="QPlainTextEdit" name="velocityY">
     <property name="geometry">
      <rect>
-      <x>750</x>
-      <y>140</y>
-      <width>64</width>
+      <x>760</x>
+      <y>110</y>
+      <width>91</width>
       <height>24</height>
      </rect>
     </property>
@@ -194,9 +194,9 @@
    <widget class="QPlainTextEdit" name="velocityZ">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>140</y>
-      <width>64</width>
+      <x>850</x>
+      <y>110</y>
+      <width>91</width>
       <height>24</height>
      </rect>
     </property>
@@ -208,7 +208,7 @@
     <property name="geometry">
      <rect>
       <x>680</x>
-      <y>110</y>
+      <y>80</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -220,8 +220,8 @@
    <widget class="QLabel" name="label_EmissionDelay">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>300</y>
+      <x>850</x>
+      <y>140</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -233,8 +233,8 @@
    <widget class="QLabel" name="label_MaxParticles">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>360</y>
+      <x>760</x>
+      <y>190</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -247,7 +247,7 @@
     <property name="geometry">
      <rect>
       <x>750</x>
-      <y>470</y>
+      <y>460</y>
       <width>191</width>
       <height>31</height>
      </rect>
@@ -257,28 +257,6 @@
     </property>
     <property name="placeholderText">
      <string>plasmaball.png</string>
-    </property>
-   </widget>
-   <widget class="QProgressBar" name="progressBar">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>580</y>
-      <width>641</width>
-      <height>10</height>
-     </rect>
-    </property>
-    <property name="value">
-     <number>0</number>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-    <property name="invertedAppearance">
-     <bool>false</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="savePS">
@@ -298,8 +276,8 @@
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>200</y>
-      <width>64</width>
+      <y>160</y>
+      <width>81</width>
       <height>24</height>
      </rect>
     </property>
@@ -311,7 +289,7 @@
     <property name="geometry">
      <rect>
       <x>680</x>
-      <y>180</y>
+      <y>140</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -324,7 +302,7 @@
     <property name="geometry">
      <rect>
       <x>680</x>
-      <y>450</y>
+      <y>440</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -443,6 +421,37 @@
      <string>Color End</string>
     </property>
    </widget>
+   <widget class="QComboBox" name="scaleBox">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>210</y>
+      <width>81</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="currentText">
+     <string>Don't Scale</string>
+    </property>
+    <item>
+     <property name="text">
+      <string>Don't Scale</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Scale In</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Scale Out</string>
+     </property>
+    </item>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -489,6 +498,7 @@
     <slot>setGravity()</slot>
     <slot>colorIn()</slot>
     <slot>colorOut()</slot>
+    <slot>scaleModeChanged(int)</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -665,6 +675,22 @@
     <hint type="sourcelabel">
      <x>694</x>
      <y>97</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>scaleBox</sender>
+   <signal>currentIndexChanged(int)</signal>
+   <receiver>maincontainer</receiver>
+   <slot>scaleModeChanged(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>710</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel">
      <x>474</x>
