--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -152,7 +152,7 @@
    <widget class="QPlainTextEdit" name="maxParticles">
     <property name="geometry">
      <rect>
-      <x>760</x>
+      <x>850</x>
       <y>210</y>
       <width>81</width>
       <height>24</height>
@@ -233,7 +233,7 @@
    <widget class="QLabel" name="label_MaxParticles">
     <property name="geometry">
      <rect>
-      <x>760</x>
+      <x>850</x>
       <y>190</y>
       <width>91</width>
       <height>16</height>
@@ -298,7 +298,7 @@
      <string>Gravity</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_MaxParticles_2">
+   <widget class="QLabel" name="label_Texture">
     <property name="geometry">
      <rect>
       <x>680</x>
@@ -424,8 +424,8 @@
    <widget class="QComboBox" name="scaleBox">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>210</y>
+      <x>760</x>
+      <y>240</y>
       <width>81</width>
       <height>24</height>
      </rect>
@@ -451,6 +451,64 @@
       <string>Scale Out</string>
      </property>
     </item>
+   </widget>
+   <widget class="QPlainTextEdit" name="sizeY">
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>210</y>
+      <width>81</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>false</bool>
+    </property>
+    <property name="placeholderText">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="sizeX">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>210</y>
+      <width>81</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>false</bool>
+    </property>
+    <property name="placeholderText">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_SizeY">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>190</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Size Y</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_SizeX">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>190</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Size X</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -499,6 +557,8 @@
     <slot>colorIn()</slot>
     <slot>colorOut()</slot>
     <slot>scaleModeChanged(int)</slot>
+    <slot>sizeX()</slot>
+    <slot>sizeY()</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -690,6 +750,38 @@
    <hints>
     <hint type="sourcelabel">
      <x>710</x>
+     <y>254</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>sizeX</sender>
+   <signal>textChanged()</signal>
+   <receiver>maincontainer</receiver>
+   <slot>sizeX()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>710</x>
+     <y>254</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>sizeY</sender>
+   <signal>textChanged()</signal>
+   <receiver>maincontainer</receiver>
+   <slot>sizeY()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>800</x>
      <y>254</y>
     </hint>
     <hint type="destinationlabel">
