--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -424,9 +424,9 @@
    <widget class="QComboBox" name="scaleBox">
     <property name="geometry">
      <rect>
-      <x>760</x>
-      <y>240</y>
-      <width>81</width>
+      <x>670</x>
+      <y>260</y>
+      <width>131</width>
       <height>24</height>
      </rect>
     </property>
@@ -508,6 +508,69 @@
     </property>
     <property name="text">
      <string>Size X</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="emitterTypeBox">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>260</y>
+      <width>121</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="currentText">
+     <string>Point</string>
+    </property>
+    <item>
+     <property name="text">
+      <string>Point</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Box</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Rectangle</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_SizeY_2">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>240</y>
+      <width>100</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Emitter Type</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_SizeY_3">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>240</y>
+      <width>110</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Scale Mode</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
